crates/biome_cli/tests/snapshots/main_cases_suppressions/custom_explanation_with_reason.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --suppress '--reason=We love Biome' fix.js
```

## `fix.js`

```js
// biome-ignore lint/suspicious/noCompareNegZero: We love Biome
(1 >= -0)
```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
