crates/biome_cli/tests/snapshots/main_cases_suppressions/err_when_both_write_and_suppress_are_passed.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --write --suppress check.js
```

## `check.js`

```js
statement();

```

# Termination Message

```block
flags/invalid ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Incompatible arguments --suppress and --write. --write is used to write fixes, and --suppress is used to suppress diagnostics. Remove one of these arguments depending on what you want to do.
  


```
