crates/biome_cli/tests/snapshots/main_cases_suppressions/err_when_only_reason.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --reason fix.js
```

## `fix.js`

```js
(1 >= -0)
```

# Termination Message

```block
flags/invalid ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unrecognized option --reason.
  
  i Type the following command for more information
  
  $ biome `--reason` is only valid when `--suppress` is used. --help
  


```
