crates/biome_cli/tests/snapshots/main_cases_suppressions/should_emit_diagnostics_for_incorrect_reason.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint file.ts
```

## `file.ts`

```ts
// biome-ignore-all lint/style/useConst:
var foo = 2;
// biome-ignore-all lint/style/useConst: <explanation>
var bar = 33;
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.ts:3:42 suppressions/incorrect ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! A suppression shouldn't have an <explanation> placeholder. Example of suppression: // biome-ignore lint: false positive
  
    1 │ // biome-ignore-all lint/style/useConst:
    2 │ var foo = 2;
  > 3 │ // biome-ignore-all lint/style/useConst: <explanation>
      │                                          ^^^^^^^^^^^^^
    4 │ var bar = 33;
  

```

```block
file.ts:3:1 suppressions/incorrect ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! Top level suppressions can only be used at the beginning of the file.
  
    1 │ // biome-ignore-all lint/style/useConst:
    2 │ var foo = 2;
  > 3 │ // biome-ignore-all lint/style/useConst: <explanation>
      │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    4 │ var bar = 33;
  
  i Rename this to biome-ignore or move it to the top of the file
  
    1 │ // biome-ignore-all lint/style/useConst:
    2 │ var foo = 2;
  > 3 │ // biome-ignore-all lint/style/useConst: <explanation>
      │    ^^^^^^^^^^^^^^^^
    4 │ var bar = 33;
  

```

```block
file.ts:2:5 lint/correctness/noUnusedVariables  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This variable foo is unused.
  
    1 │ // biome-ignore-all lint/style/useConst:
  > 2 │ var foo = 2;
      │     ^^^
    3 │ // biome-ignore-all lint/style/useConst: <explanation>
    4 │ var bar = 33;
  
  i Unused variables are often the result of typos, incomplete refactors, or other sources of bugs.
  
  i Unsafe fix: If this is intentional, prepend foo with an underscore.
  
    1 1 │   // biome-ignore-all lint/style/useConst:
    2   │ - var·foo·=·2;
      2 │ + var·_foo·=·2;
    3 3 │   // biome-ignore-all lint/style/useConst: <explanation>
    4 4 │   var bar = 33;
  

```

```block
file.ts:4:5 lint/correctness/noUnusedVariables  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This variable bar is unused.
  
    2 │ var foo = 2;
    3 │ // biome-ignore-all lint/style/useConst: <explanation>
  > 4 │ var bar = 33;
      │     ^^^
  
  i Unused variables are often the result of typos, incomplete refactors, or other sources of bugs.
  
  i Unsafe fix: If this is intentional, prepend bar with an underscore.
  
    2 2 │   var foo = 2;
    3 3 │   // biome-ignore-all lint/style/useConst: <explanation>
    4   │ - var·bar·=·33;
      4 │ + var·_bar·=·33;
  

```

```block
file.ts:1:24 suppressions/parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Reason is missing and can't be empty.
  
  > 1 │ // biome-ignore-all lint/style/useConst:
      │                        
    2 │ var foo = 2;
    3 │ // biome-ignore-all lint/style/useConst: <explanation>
  
  i A reason is mandatory: try to explain why the suppression is needed.
  
  i Example of suppression: // biome-ignore lint: reason
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
Found 4 warnings.
```
