crates/biome_cli/tests/snapshots/main_cases_suppressions/suppress_multiple_ok.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --suppress fix.js
```

## `fix.js`

```js
// biome-ignore lint/suspicious/noCompareNegZero: ignored using `--suppress`
(1 >= -0)
// biome-ignore lint/suspicious/noCompareNegZero: ignored using `--suppress`
(1 >= -0)
```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
