crates/biome_cli/tests/snapshots/main_cases_suppressions/suppress_skip_ok.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --suppress --skip=lint/suspicious/noCompareNegZero fix.js
```

## `fix.js`

```js
(1 >= -0)
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
